<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.feed.FeedFragment">

    <LinearLayout
        android:id="@+id/feed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_feed_tab"
            style="@style/YabuTitle" />
    </LinearLayout>

    <TextView
        android:id="@+id/feed_loading"
        android:text="@string/feed_loading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        style="@style/YabuText"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/feed_error"
        android:text="@string/feed_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_medium"
        style="@style/YabuText"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feed_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/feed_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/feed_item"/>
</androidx.constraintlayout.widget.ConstraintLayout>